Added initial migrations - works

--- a/FBSApp/FBSApp/appsettings.json
+++ b/FBSApp/FBSApp/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "ConStr": "Server=(local);Database=FBS_DB;TrustServerCertificate=True;Integrated Security=True;"
+  },
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "kJMhxZ0KdKL6UDuH41Bd",
+    "Issuer": "http://localhost:54315",
+    "Audience": "http://localhost:54315"
+  }
 }
