Added JWT generator

--- a/FBSApp/FBSApp/appsettings.json
+++ b/FBSApp/FBSApp/appsettings.json
@@ -10,7 +10,7 @@
   },
   "AllowedHosts": "*",
   "Jwt": {
-    "Key": "kJMhxZ0KdKL6UDuH41Bd",
+    "Key": "DIEM2k23DIEM2k23DIEM2k23DIEM2k23",
     "Issuer": "http://localhost:54315",
     "Audience": "http://localhost:54315"
   }
