--- a/frontend/fbs_app/package.json
+++ b/frontend/fbs_app/package.json
@@ -16,6 +16,8 @@
     "@mui/material": "^5.14.2",
     "@mui/x-date-pickers": "^6.11.1",
     "dayjs": "^1.11.9",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loading": "^2.0.3",
